plugins {
    alias(libs.plugins.androidApplication)
}

android {
    namespace 'com.linearity.datservicereplacement'
    compileSdk 34

    defaultConfig {
        applicationId "com.linearity.datservicereplacement"
        minSdk 34
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        externalNativeBuild {
            cmake {
                cppFlags ''
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
//    externalNativeBuild {
//        cmake {
//            path file('src/main/cpp/CMakeLists.txt')
//            version '3.22.1'
//        }
//    }
    buildFeatures {
        compose true
        // Disable unused AGP features
        buildConfig false
        aidl true
        renderScript false
        resValues false
        shaders false
    }
    sourceSets {
        main
            {
                aidl.srcDirs = ['src/main/aidl']
            }
    }
}
dependencies {
    implementation libs.annotation.jvm
    compileOnly 'de.robv.android.xposed:api:82'

    def libsuVersion = '6.0.0'

    // The core module that provides APIs to a shell
    implementation "com.github.topjohnwu.libsu:core:${libsuVersion}"

    // Optional: APIs for creating root services. Depends on ":core"
    implementation "com.github.topjohnwu.libsu:service:${libsuVersion}"

    // Optional: Provides remote file system support
    implementation "com.github.topjohnwu.libsu:nio:${libsuVersion}"


    // 3. Android - Use Guava in your implementation only:
    implementation("com.google.guava:guava:33.2.1-android")
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'

}